--- a/07_complex_prediction/07_Complex_Prediction_Problem.ipynb
+++ b/07_complex_prediction/07_Complex_Prediction_Problem.ipynb
@@ -4,7 +4,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# Complex Predictions Problems"
+        "# Multi Target Prediction"
       ]
     },
     {
